<resources>
    <string name="app_name" translatable="false">CiboInClick</string>
    <string name="infoChiamata">Attenzione: per prenotare, si prega di chiamare con qualche ora di anticipo usando l\'apposito tasto in basso.</string>
    <string name="buttonRecensioni">Recensioni</string>
    <string name="buttonChiama">Prenota</string>
    <string name="chiamaTel">Chiama +39%1$s</string>
    <string name="prezzo">%1$.2f€</string>
    <string name="Prezzo">Prezzo</string>
    <string name="Prodotto">Prodotto</string>
    <string name="Tipo">Tipo</string>
    <string name="Menù">MENU\'</string>
    <string name="benvenuto">Benvenuto da %1$s, nell\'ultimo periodo hai ordinato qui %2$d volte. Cosa vuoi ordinare?</string>

    <string name="lunedì">lunedì</string>
    <string name="martedì">martedì</string>
    <string name="mercoledì">mercoledì</string>
    <string name="giovedì">giovedì</string>
    <string name="venerdì">venerdì</string>
    <string name="sabato">sabato</string>
    <string name="domenica">domenica</string>

    <!-- ActivityRecensione-->
    <string name="cibo_r">Cibo:</string>
    <string name="prezzo_r">Prezzo:</string>
    <string name="inserimento_nome_r">Inserisci il tuo nome</string>
    <string name="vota_cibo">Vota il cibo:</string>
    <string name="vota_prezzo">Vota il prezzo:</string>
    <string name="conferma_recensione">Conferma!</string>
    <string name="recensioni_nome_ristorante">Recensioni - Nome Ristorante</string>
    <string name="nomeR">Nome</string>
    <string name="ciboR">Cibo</string>
    <string name="prezzoR">Prezzo</string>
    <string name="recensioneInserita">Recensione inviata con successo!</string>
    <string name="valutazioneErrata">Inserisci il tuo nome e valuta entrambe le categorie</string>

    <!-- MainActivity-->
    <string name="cambiaLingua">Cambia lingua \ud83c\uddec\ud83c\udde7</string>
    <string name="mangiareGiorno">Buongiorno, si avvicina l\'ora di pranzo. Cosa vuoi mangiare?</string>
    <string name="mangiarePomeriggio">Buon pomeriggio, cosa vuoi mangiare?</string>
    <string name="mangiareSera">Buonasera, si avvicina l\'ora di cena. Cosa vuoi mangiare?</string>
    <string name="mangiareNotte">Buonasera, è molto tardi, spuntino notturno?</string>
    <string name="sito" translatable="false">www.ciboinclick.it</string>
    <string name="ultimaPButton" translatable="false">ultimaP</string>
    <string name="ultimoGButton" translatable="false">ultimoG</string>
    <string name="ultimaPText">Ultimamente hai prenotato spesso da %1$s, vuoi andarci?</string>
    <string name="ultimoGText">%1$s scorso hai mangiato da %2$s, vuoi prenotare?</string>
    <string name="prenota">Prenota %1$s</string>


    <!-- Mappa -->
    <string name="seiA">Sei a %1$s</string>
    <string name="tipoTPanino">panino</string>
    <string name="tipoTPizza">pizza</string>
    <string name="tipoTSushi">sushi</string>
    <string name="tipoTTutto" translatable="false">*</string>



    <string name = "my_map_api_key">AIzaSyAkbI1wDdws2ErfJT4dAuxht0pKX7MiVtk</string>


</resources>