<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1C4E9"


    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="321dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:background="#D1C4E9"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/pizza2"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="140dp"
                android:background="#D1C4E9"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/hamburger_top"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton3"
                android:background="#D1C4E9"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/sushi"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:background="#D1C4E9"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/all_foods"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="400dp"
        android:layout_height="145dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cambiaLingua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiaLingua"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prezzo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="409dp"
        android:layout_height="265dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@mipmap/fastfood" />

        <TextView
            android:id="@+id/textUltimaPrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textUltimoGiorno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bottoneUltimoGiorno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bottoneUltimaPren"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="70dp"
            android:backgroundTint="#D1C4E9"
            android:text="@string/ultimaPButton"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textUltimoGiorno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textUltimaPrent" />

        <Button
            android:id="@+id/bottoneUltimoGiorno"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:width="60dp"
            android:height="70dp"
            android:backgroundTint="#D1C4E9"
            android:text="@string/ultimoGButton"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>